# ai-usage-tracker

./: .gitignore  README.md
.github/workflows/: release.yml
docs/: EXTERNAL_MONITORING_API.md
docs/superpowers/plans/: 2026-06-30-ai-assistant-usage-overlay.md  2026-07-06-ten-features.md  2026-07-06-usage-limit-bar.md
docs/superpowers/specs/: 2026-06-30-ai-assistant-usage-overlay-design.md  2026-07-06-usage-limit-bar-design.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app.rs  burn_rate.rs  claude.rs  claude_usage.rs  codex.rs  collector.rs  config.rs  hermes.rs  history.rs  home.rs  lib.rs  main.rs  model.rs  pricing.rs  process.rs  rate_limit.rs  transcript.rs
src-tauri/src/providers/: claude.rs  codex.rs  hermes.rs  mod.rs
src-tauri/tests/: app_test.rs  claude_test.rs  codex_test.rs  config_test.rs  model_test.rs  process_test.rs  transcript_test.rs
src-tauri/tests/fixtures/: claude_session.json  claude_transcript.jsonl  codex_rollout.jsonl
