[package]
name = "ai-usage-overlay"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.32"
toml = "0.8"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }

# Keep core modules as internal modules, not a library
# [lib] - removed for binary app

[[bin]]
name = "ai-usage-overlay"
path = "src/main.rs"
